<resources>
    <string name="app_name">starupcowokapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amit_kumar">name</string>
    <string name="username">username</string>
    <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="amitthecoder">username</string>
    <string name="gender">Gender</string>
    <string name="male">gender</string>
    <string name="age">Age</string>
    <string name="_21">age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_07_02_2003">07/02/2003</string>
    <string name="mobile">Mobile</string>
    <string name="_91_9000000009">+92 3078993925</string>
    <string name="email">Email</string>
    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
    <string name="social_media">Social Media</string>
    <string name="open_nav">open Navigation Drawer</string>
    <string name="close_nav">close Navigation Drawer</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="forget_password">Forget Password</string>
    <string name="dont_have_an_account">dont have an account ?</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="forget_passward">Forget Passward ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="msg_token_fmt">testnotification</string>
</resources>