<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACTIVITY_ONBOARDING1"
    android:background="@color/orange"
>


    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/onboarding_viewpager"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toTopOf="@id/viewCenterOfNext"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSkip"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/skip"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/icon_outer_background"
        app:layout_constraintBottom_toBottomOf="@+id/imgNext"
        app:layout_constraintEnd_toEndOf="@+id/imgNext"
        app:layout_constraintStart_toStartOf="@+id/imgNext"
        app:layout_constraintTop_toTopOf="@+id/imgNext"/>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/viewCenterOfNext"
        app:layout_constraintBottom_toBottomOf="@+id/imgNext"
        app:layout_constraintEnd_toEndOf="@+id/imgNext"
        app:layout_constraintStart_toStartOf="@+id/imgNext"
        app:layout_constraintTop_toTopOf="@+id/imgNext"/>



    <ImageView
        android:id="@+id/imgNext"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/icone_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        app:tint = "@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/GetStarted"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:backgroundTint="@color/white"
        android:text="@string/get_started"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>